# molayo

molayo_backend_FastAPI/: .python-version  Dockerfile  pyproject.toml
molayo_backend_FastAPI/src/: alembic.ini  connection.py  main.py
molayo_backend_FastAPI/src/migrations/: env.py
molayo_backend_FastAPI/src/migrations/versions/: 449602c0b454_second.py  7b42b21fd055_init.py  a9eda6b4c43f_3.py
molayo_backend_FastAPI/src/models/: posts.py  users.py
molayo_backend_FastAPI/src/routes/: deeplearning.py  posts.py  users.py
molayo_frontend_vue/: Dockerfile  README.md  components.d.ts  default.conf  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
molayo_frontend_vue/src/: App.vue  main.ts
molayo_frontend_vue/src/components/: Deep_Learning.vue  Header.vue  Main_Page.vue
molayo_frontend_vue/src/components/Account/: Account_Info.vue  Login.vue  Register.vue
molayo_frontend_vue/src/components/Community/: Post_Create_Update.vue  Post_Detail.vue  Post_List.vue
molayo_frontend_vue/src/router/: index.ts
molayo_frontend_vue/src/stores/: global_store.ts
